--- a/problem-a/index.html
+++ b/problem-a/index.html
@@ -11,7 +11,16 @@
         src="img/elle-woods.jpeg"
         alt="Image of Elle Woods holding a puppy"
     />
-    <p>Hi</p>
-    
+    <p>
+        Elle Woods is the main character in the 2001 film,
+        <a href="https://en.wikipedia.org/wiki/Legally_Blonde">Legally Blonde</a>
+        . She's a ditsy sorority girl that goes to Harvard Law School to pursue a guy. However, she soon finds a passion for law and uses her peers' ridicule of her girly persona to fuel her success.
+    </p>
+    <ul>
+       <li>She's a girlboss</li> 
+       <li>She doesn't care what others think</li>
+       <li>She still got the (better) guy in the end</li>
+       <li>Love her style + the dog</li>
+    </ul>
 </body>
 </html>
