Added color and image sizing

--- a/problem-a/index.html
+++ b/problem-a/index.html
@@ -17,7 +17,7 @@
         . She's a ditsy sorority girl that goes to Harvard Law School to pursue a guy. However, she soon finds a passion for law and uses her peers' ridicule of her girly persona to fuel her success.
     </p>
     <ul>
-       <li>She's a girlboss</li> 
+       <li class="colored">She's a girlboss</li> 
        <li>She doesn't care what others think</li>
        <li>She still got the (better) guy in the end</li>
        <li>Love her style + the dog</li>
