fixed errors in jest

--- a/problem-a/index.html
+++ b/problem-a/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="Anumita Ghosh">
+    <meta name="author" content="Anumita Ghosh">
+    <link href="css/style.css" rel="stylesheet" />
     <title>Elle Woods</title>
 </head>
 <body>
@@ -23,6 +24,4 @@
        <li>Love her style + the dog</li>
     </ul>
 </body>
-
-<link href="css/style.css" rel="stylesheet" />
 </html>
